# quickproj

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.sh
src/: cli.rs  client.rs  constants.rs  error.rs  filesystem.rs  main.rs  terminal.rs
src/installers/: base.rs  git.rs  local.rs  mod.rs  traits.rs
src/managers/: mod.rs  repository.rs  template.rs  traits.rs
src/plugins/: base.rs  mod.rs  utils.rs
src/templates/: config.rs  handler.rs  mod.rs  renderer.rs  task.rs  traits.rs  utils.rs
