[package]
name = "quickproj"
version = "0.1.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
edition = "2018"

[dependencies]
bytesize = "1.0"
clap = "2.31"
console = "0.9"
dirs = "2.0"
fs_extra = "1.1"
git2 = "0.10"
git2_credentials = "0.3"
handlebars = "2.0.1"
indicatif = "0.12.0"
read_input = "0.8"
rm_rf = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2.18"
structopt-derive = "0.2.18"
toml = "0.5"
quick-error = "1.2.2"
walkdir = "2.2"